--- a/public/pages/login.html
+++ b/public/pages/login.html
@@ -5,7 +5,55 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>UWA Social Work Field Education Placement</title>
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
-  <link rel="stylesheet" href="styles.css">
+  <style>
+    body {
+      display: flex;
+      flex-direction: column;
+      min-height: 100vh;
+    }
+    main {
+      flex: 1;
+    }
+    .navbar {
+      background-color: #27358C !important; /* Primary blue */
+    }
+    .navbar-brand, .nav-link {
+      color: #FFFFFF !important; /* White text */
+    }
+    .nav-link.active {
+      color: #DDB106 !important; /* Accent gold for active link */
+    }
+    .btn-primary {
+      background-color: #27358C; /* Primary blue */
+      border-color: #27358C;
+    }
+    .btn-primary:hover {
+      background-color: #1F2C6E; /* Darker shade of primary blue */
+      border-color: #1F2C6E;
+    }
+    .btn-outline-primary {
+      color: #27358C;
+      border-color: #27358C;
+    }
+    .btn-outline-primary:hover {
+      background-color: #27358C;
+      color: #FFFFFF;
+    }
+    footer {
+      background-color: #27358C !important; /* Primary blue */
+      color: #FFFFFF; /* White text */
+    }
+    .modal-header {
+      background-color: #27358C; /* Primary blue */
+      color: #FFFFFF; /* White text */
+    }
+    .btn-close {
+      filter: invert(1); /* White close button */
+    }
+    .feature-icon {
+      color: #DDB106; /* Accent gold */
+    }
+  </style>
 </head>
 <body>
   <nav class="navbar navbar-expand-lg navbar-dark bg-primary">
@@ -30,60 +78,62 @@
     </div>
   </nav>
 
-  <div class="container mt-5">
-    <div class="row">
-      <div class="col-md-4">
-        <div class="hero-content">
-          <h1>Social Work Field Education Placement</h1>
-          <p class="lead">A geographic visualization and matching tool for UWA's Social Work Field Education team.</p>
-          <p>Efficiently match students with suitable agencies based on location, preferences, and requirements.</p>
-          <div class="d-flex gap-2 mt-4">
-            <button class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#loginModal">Login</button>
-            <button class="btn btn-outline-primary" data-bs-toggle="modal" data-bs-target="#signupModal">Sign Up</button>
+  <main>
+    <div class="container mt-5">
+      <div class="row">
+        <div class="col-md-4">
+          <div class="hero-content">
+            <h1>Social Work Field Education Placement</h1>
+            <p class="lead">A geographic visualization and matching tool for UWA's Social Work Field Education team.</p>
+            <p>Efficiently match students with suitable agencies based on location, preferences, and requirements.</p>
+            <div class="d-flex gap-2 mt-4">
+              <button class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#loginModal">Login</button>
+              <button class="btn btn-outline-primary" data-bs-toggle="modal" data-bs-target="#signupModal">Sign Up</button>
+            </div>
           </div>
         </div>
-      </div>
-      <div class="col-md-8">
-        <div class="container">
-          <h2 class="text-center mb-4">About the Platform</h2>
-          <div class="row">
-            <div class="col-md-4 mb-4">
-              <div class="card h-100">
-                <div class="card-body text-center">
-                  <div class="feature-icon mb-3">
-                    <svg xmlns="http://www.w3.org/2000/svg" width="48" height="48" fill="currentColor" class="bi bi-geo-alt" viewBox="0 0 16 16">
-                      <path d="M12.166 8.94c-.524 1.062-1.234 2.12-1.96 3.07A31.493 31.493 0 0 1 8 14.58a31.481 31.481 0 0 1-2.206-2.57c-.726-.95-1.436-2.008-1.96-3.07C3.304 7.867 3 6.862 3 6a5 5 0 0 1 10 0c0 .862-.305 1.867-.834 2.94zM8 16s6-5.686 6-10A6 6 0 0 0 2 6c0 4.314 6 10 6 10z"/>
-                      <path d="M8 8a2 2 0 1 1 0-4 2 2 0 0 1 0 4zm0 1a3 3 0 1 0 0-6 3 3 0 0 0 0 6z"/>
-                    </svg>
+        <div class="col-md-8">
+          <div class="container">
+            <h2 class="text-center mb-4">About the Platform</h2>
+            <div class="row">
+              <div class="col-md-4 mb-4">
+                <div class="card h-100">
+                  <div class="card-body text-center">
+                    <div class="feature-icon mb-3">
+                      <svg xmlns="http://www.w3.org/2000/svg" width="48" height="48" fill="currentColor" class="bi bi-geo-alt" viewBox="0 0 16 16">
+                        <path d="M12.166 8.94c-.524 1.062-1.234 2.12-1.96 3.07A31.493 31.493 0 0 1 8 14.58a31.481 31.481 0 0 1-2.206-2.57c-.726-.95-1.436-2.008-1.96-3.07C3.304 7.867 3 6.862 3 6a5 5 0 0 1 10 0c0 .862-.305 1.867-.834 2.94zM8 16s6-5.686 6-10A6 6 0 0 0 2 6c0 4.314 6 10 6 10z"/>
+                        <path d="M8 8a2 2 0 1 1 0-4 2 2 0 0 1 0 4zm0 1a3 3 0 1 0 0-6 3 3 0 0 0 0 6z"/>
+                      </svg>
+                    </div>
+                    <h3 class="card-title">Interactive Mapping</h3>
+                    <p class="card-text">Visualize stakeholder locations on an interactive map to make informed placement decisions.</p>
                   </div>
-                  <h3 class="card-title">Interactive Mapping</h3>
-                  <p class="card-text">Visualize stakeholder locations on an interactive map to make informed placement decisions.</p>
                 </div>
               </div>
-            </div>
-            <div class="col-md-4 mb-4">
-              <div class="card h-100">
-                <div class="card-body text-center">
-                  <div class="feature-icon mb-3">
-                    <svg xmlns="http://www.w3.org/2000/svg" width="48" height="48" fill="currentColor" class="bi bi-filter" viewBox="0 0 16 16">
-                      <path d="M6 10.5a.5.5 0 0 1 .5-.5h3a.5.5 0 0 1 0 1h-3a.5.5 0 0 1-.5-.5zm-2-3a.5.5 0 0 1 .5-.5h7a.5.5 0 0 1 0 1h-7a.5.5 0 0 1-.5-.5zm-2-3a.5.5 0 0 1 .5-.5h11a.5.5 0 0 1 0 1h-11a.5.5 0 0 1-.5-.5z"/>
-                    </svg>
+              <div class="col-md-4 mb-4">
+                <div class="card h-100">
+                  <div class="card-body text-center">
+                    <div class="feature-icon mb-3">
+                      <svg xmlns="http://www.w3.org/2000/svg" width="48" height="48" fill="currentColor" class="bi bi-filter" viewBox="0 0 16 16">
+                        <path d="M6 10.5a.5.5 0 0 1 .5-.5h3a.5.5 0 0 1 0 1h-3a.5.5 0 0 1-.5-.5zm-2-3a.5.5 0 0 1 .5-.5h7a.5.5 0 0 1 0 1h-7a.5.5 0 0 1-.5-.5zm-2-3a.5.5 0 0 1 .5-.5h11a.5.5 0 0 1 0 1h-11a.5.5 0 0 1-.5-.5z"/>
+                      </svg>
+                    </div>
+                    <h3 class="card-title">Advanced Filtering</h3>
+                    <p class="card-text">Filter stakeholders based on multiple criteria including location, interests, and availability.</p>
                   </div>
-                  <h3 class="card-title">Advanced Filtering</h3>
-                  <p class="card-text">Filter stakeholders based on multiple criteria including location, interests, and availability.</p>
                 </div>
               </div>
-            </div>
-            <div class="col-md-4 mb-4">
-              <div class="card h-100">
-                <div class="card-body text-center">
-                  <div class="feature-icon mb-3">
-                    <svg xmlns="http://www.w3.org/2000/svg" width="48" height="48" fill="currentColor" class="bi bi-people" viewBox="0 0 16 16">
-                      <path d="M15 14s1 0 1-1-1-4-5-4-5 3-5 4 1 1 1 1h8Zm-7.978-1A.261.261 0 0 1 7 12.996c.001-.264.167-1.03.76-1.72C8.312 10.629 9.282 10 11 10c1.717 0 2.687.63 3.24 1.276.593.69.758 1.457.76 1.72l-.008.002a.274.274 0 0 1-.014.002H7.022ZM11 7a2 2 0 1 0 0-4 2 2 0 0 0 0 4Zm3-2a3 3 0 1 1-6 0 3 3 0 0 1 6 0ZM6.936 9.28a5.88 5.88 0 0 0-1.23-.247A7.35 7.35 0 0 0 5 9c-4 0-5 3-5 4 0 .667.333 1 1 1h4.216A2.238 2.238 0 0 1 5 13c0-1.01.377-2.042 1.09-2.904.243-.294.526-.569.846-.816ZM4.92 10A5.493 5.493 0 0 0 4 13H1c0-.26.164-1.03.76-1.724.545-.636 1.492-1.256 3.16-1.275ZM1.5 5.5a3 3 0 1 1 6 0 3 3 0 0 1-6 0Zm3-2a2 2 0 1 0 0 4 2 2 0 0 0 0-4Z"/>
-                    </svg>
+              <div class="col-md-4 mb-4">
+                <div class="card h-100">
+                  <div class="card-body text-center">
+                    <div class="feature-icon mb-3">
+                      <svg xmlns="http://www.w3.org/2000/svg" width="48" height="48" fill="currentColor" class="bi bi-people" viewBox="0 0 16 16">
+                        <path d="M15 14s1 0 1-1-1-4-5-4-5 3-5 4 1 1 1 1h8Zm-7.978-1A.261.261 0 0 1 7 12.996c.001-.264.167-1.03.76-1.72C8.312 10.629 9.282 10 11 10c1.717 0 2.687.63 3.24 1.276.593.69.758 1.457.76 1.72l-.008.002a.274.274 0 0 1-.014.002H7.022ZM11 7a2 2 0 1 0 0-4 2 2 0 0 0 0 4Zm3-2a3 3 0 1 1-6 0 3 3 0 0 1 6 0ZM6.936 9.28a5.88 5.88 0 0 0-1.23-.247A7.35 7.35 0 0 0 5 9c-4 0-5 3-5 4 0 .667.333 1 1 1h4.216A2.238 2.238 0 0 1 5 13c0-1.01.377-2.042 1.09-2.904.243-.294.526-.569.846-.816ZM4.92 10A5.493 5.493 0 0 0 4 13H1c0-.26.164-1.03.76-1.724.545-.636 1.492-1.256 3.16-1.275ZM1.5 5.5a3 3 0 1 1 6 0 3 3 0 0 1-6 0Zm3-2a2 2 0 1 0 0 4 2 2 0 0 0 0-4Z"/>
+                      </svg>
+                    </div>
+                    <h3 class="card-title">Automated Matching</h3>
+                    <p class="card-text">Generate optimal placement recommendations based on defined priorities and requirements.</p>
                   </div>
-                  <h3 class="card-title">Automated Matching</h3>
-                  <p class="card-text">Generate optimal placement recommendations based on defined priorities and requirements.</p>
                 </div>
               </div>
             </div>
@@ -91,10 +141,9 @@
         </div>
       </div>
     </div>
-  </div>
+  </main>
 
-
-  <footer class="bg-dark text-white py-4 mt-5">
+  <footer class="text-white py-4 mt-5">
     <div class="container text-center">
       <p>© 2025 UWA Social Work Field Education Placement.</p>
     </div>
@@ -167,17 +216,30 @@
     </div>
   </div>
 
-  <!-- Firebase SDK -->
-  <script src="https://www.gstatic.com/firebasejs/9.22.0/firebase-app-compat.js"></script>
-  <script src="https://www.gstatic.com/firebasejs/9.22.0/firebase-auth-compat.js"></script>
-  <script src="https://www.gstatic.com/firebasejs/9.22.0/firebase-firestore-compat.js"></script>
-  
+  <!--  Firebase + App Auth + Firestore ES Module Support -->
+  <script type="module">
+    import "../js/auth.js";
+  </script>
   <!-- Bootstrap JS -->
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
   
-  <!-- Custom JS -->
-  <script src="firebase-config.js"></script>
-  <script src="auth.js"></script>
-  <script src="app.js"></script>
+ 
+  <script>
+    document.getElementById('signupForm').addEventListener('submit', function (event) {
+      event.preventDefault();
+      const email = document.getElementById('signupEmail').value;
+      const errorDiv = document.getElementById('signupError');
+      
+      if (!email.endsWith('@uwa.edu.au')) {
+        errorDiv.textContent = 'Only @uwa.edu.au email addresses are allowed.';
+        errorDiv.classList.remove('d-none');
+        return;
+      }
+      
+      errorDiv.classList.add('d-none');
+      // Proceed with sign-up logic
+      console.log('Sign-up form submitted');
+    });
+  </script>
 </body>
 </html>
