--- a/public/pages/upload-file.html
+++ b/public/pages/upload-file.html
@@ -8,8 +8,8 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
     <!-- Bootstrap Icons -->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.1/font/bootstrap-icons.css">
-    <!-- Custom CSS -->
-    <link rel="stylesheet" href="../css/upload-file.css">
+    <!-- Custom Navbar CSS -->
+    <link rel="stylesheet" href="../css/nav.css">
     <style>
         .card-header {
             background-color: #27358C;
@@ -120,6 +120,30 @@
     </style>
 </head>
 <body>
+    <nav class="navbar navbar-expand-lg navbar-dark bg-primary">
+        <div class="container">
+          <a class="navbar-brand" href="/public/pages/login.html">UWA Social Work Placement Mapper</a>
+          <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav">
+            <span class="navbar-toggler-icon"></span>
+          </button>
+          <div class="collapse navbar-collapse" id="navbarNav">
+            <ul class="navbar-nav ms-auto">
+              <li class="nav-item">
+                <a class="nav-link active" href="#">Data Upload</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="../pages/map-filter.html">Visualisation</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="../pages/">Matching</a>
+              </li>
+                <li class="nav-item">
+                    <button id="logoutBtn" class="btn btn-outline-danger">Logout</button>
+                </li>
+            </ul>
+          </div>
+        </div>
+      </nav>
     <div class="container py-5">
         <div class="row justify-content-center">
             <div class="col-lg-10">
@@ -620,6 +644,8 @@
     <!-- Custom JS -->
     <script src="../js/upload-file.js"></script>
     <script type="module" src="../js/auth-check.js"></script>
+    <script type="module" src="../js/logout.js"></script>
+
 
 </body>
 </html>
