--- a/public/pages/upload-file.html
+++ b/public/pages/upload-file.html
@@ -139,7 +139,7 @@
     </style>
 </head>
 <body>
-    <nav class="navbar navbar-expand-lg navbar-dark bg-primary">
+    <nav class="navbar navbar-expand-lg navbar-dark bg-primary custom-navbar">
         <div class="container">
           <a class="navbar-brand" href="/public/pages/login.html">UWA Social Work Placement Mapper</a>
           <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav">
@@ -154,7 +154,7 @@
                 <a class="nav-link" href="../pages/map-filter.html">Visualisation</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="../pages/">Matching</a>
+                <a class="nav-link" href="../pages/match.html">Matching</a>
               </li>
                 <li class="nav-item">
                     <button id="logoutBtn" class="btn btn-outline-danger">Logout</button>
