--- a/public/pages/login.html
+++ b/public/pages/login.html
@@ -18,7 +18,7 @@
   <link rel="stylesheet" href="../css/nav.css">
 </head>
 <body>
-  <nav class="navbar navbar-expand-lg navbar-dark bg-primary">
+  <nav class="custom-navbar navbar navbar-expand-lg navbar-dark bg-primary">
     <div class="container">
       <a class="navbar-brand" href="/public/pages/login.html">UWA Social Work Placement Mapper</a>
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav">
@@ -40,7 +40,7 @@
             <p class="lead">A geographic visualization and matching tool for UWA's Social Work Field Education team.</p>
             <p>Efficiently match students with suitable agencies based on location, preferences, and requirements.</p>
             <div class="d-flex gap-2 mt-4">
-              <button class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#loginModal">Login</button>
+              <button class="btn btn-primary bg-deepblue" data-bs-toggle="modal" data-bs-target="#loginModal">Login</button>
               <button class="btn btn-outline-primary" data-bs-toggle="modal" data-bs-target="#signupModal">Sign Up</button>
             </div>
           </div>
@@ -96,7 +96,7 @@
     </div>
   </main>
 
-  <footer class="text-white py-4 mt-5">
+  <footer class="bg-deepblue text-white py-4 mt-5">
     <div class="container text-center">
       <p>© 2025 UWA Social Work Field Education Placement.</p>
     </div>
@@ -121,7 +121,7 @@
               <input type="password" class="form-control" id="loginPassword" required>
             </div>
             <div id="loginError" class="alert alert-danger d-none"></div>
-            <button type="submit" class="btn btn-primary w-100">Login</button>
+            <button type="submit" class="bg-deepblue btn btn-primary w-100">Login</button>
           </form>
         </div>
         <div class="modal-footer justify-content-center">
@@ -159,7 +159,7 @@
               <input type="password" class="form-control" id="signupConfirmPassword" required>
             </div>
             <div id="signupError" class="alert alert-danger d-none"></div>
-            <button type="submit" class="btn btn-primary w-100">Sign Up</button>
+            <button type="submit" class="btn btn-primary bg-deepblue w-100">Sign Up</button>
           </form>
         </div>
         <div class="modal-footer justify-content-center">
