Enhance matching functionality by integrating sessional staff data and updating UI elements for better user experience

--- a/public/pages/match.html
+++ b/public/pages/match.html
@@ -379,6 +379,10 @@
               <div id="map" style="position: absolute; top: 0; bottom: 0; left: 0; right: 0; width: 100%; height: 100%;"></div>
               <div class="map-legend">
                 <h6>Map Legend</h6>
+                <label>
+                  <input type="checkbox" id="toggleLines" checked />
+                  Show Assignment Lines
+                </label>
                 <div><i style="background: #27358C"></i> Agency</div>
                 <div><i style="background: #4CAF50; border-radius: 50%;"></i> Assigned FE2 Student</div>
                 <div><i style="background: #2196F3; border-radius: 50%;"></i> Assigned FE1 Student</div>
