--- a/public/pages/upload-file.html
+++ b/public/pages/upload-file.html
@@ -641,6 +641,10 @@
                                     <td>EFE</td>
                                     <td>External field education</td>
                                 </tr>
+                                <tr>
+                                    <td>Sector</td>
+                                    <td>Area of sector expertise or preference</td>
+                                </tr>
                             </tbody>
                         </table>
                     </div>
