added the ability to manually change assignments

--- a/public/pages/match.html
+++ b/public/pages/match.html
@@ -228,6 +228,20 @@
       border-color: #27358C;
     }
    
+    .assignment-controls {
+    display: flex;
+    flex-wrap: wrap;
+    gap: 10px;
+    align-items: flex-end;
+    margin-top: 10px;
+  }
+
+  .assignment-controls .form-group {
+    display: flex;
+    flex-direction: column;
+  }
+
+
   </style>
 </head>
 <body>
