Added User Manual page and developer docs page and update navigation links, README
- Created a new User Manual page (manual.html) with comprehensive documentation for the UWA Social Work Placement Mapper.
- Updated navigation in map-filter.html, match.html, upload-file.html to include a link to the User Manual.
- Removed the deprecated matching-settings.html file as its functionality has been integrated elsewhere.
- Adjusted script references in match.html for better clarity and organization.

--- a/public/pages/map-filter.html
+++ b/public/pages/map-filter.html
@@ -30,6 +30,9 @@
               <li class="nav-item">
                 <a class="nav-link" href="../pages/match.html">Matching</a>
               </li>
+              <li class="nav-item">
+                        <a class="nav-link " href="../pages/manual.html">User Manual</a>
+              </li>
                 <li class="nav-item">
                     <button id="logoutBtn" class="btn btn-outline-danger">Logout</button>
                 </li>
