--- a/public/pages/match.html
+++ b/public/pages/match.html
@@ -262,6 +262,9 @@
           <li class="nav-item">
             <a class="nav-link active" href="#">Matching</a>
           </li>
+          <li class="nav-item">
+                        <a class="nav-link " href="../pages/manual.html">User Manual</a>
+          </li>
             <li class="nav-item">
                 <button id="logoutBtn" class="btn btn-outline-danger">Logout</button>
             </li>
@@ -487,12 +490,14 @@
   </div>
 
   <!-- External Libraries -->
+  <script type="module" src="../js/auth-check.js"></script>
+  <script type="module" src="../js/logout.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
   <script src="https://unpkg.com/xlsx/dist/xlsx.full.min.js"></script>
   <script src="https://api.mapbox.com/mapbox-gl-js/v2.15.0/mapbox-gl.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/FileSaver.js/2.0.5/FileSaver.min.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/notyf@3/notyf.min.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/munkres-js@1.2.2/munkres.min.js"></script>
-  <script type="module" src="../js/script.js"></script>
+  <script type="module" src="../js/match.js"></script>
 </body>
 </html>
