Fix links in README and logout redirection; updated Developer Docs link in manual.html

--- a/public/pages/manual.html
+++ b/public/pages/manual.html
@@ -776,7 +776,8 @@
                         <li><a href="#troubleshooting" class="text-white">Troubleshooting</a></li>
                         <li><a href="#faq" class="text-white">FAQ</a></li>
                         <li><a href="mailto:mihirtayshete@gmail.com, alanchacko42@gmail.com" class="text-white">Contact Support</a></li>
-                        <li><a href="../pages/developerdoc.html"></a>Developer Docs</li>
+                        <li><a href="../pages/developerdoc.html" class="text-white">Developer Docs</a></li>
+                        
                     </ul>
                 </div>
             </div>
