Added index.html for redirect and updated links in navbar across multiple pages

--- a/public/pages/login.html
+++ b/public/pages/login.html
@@ -20,7 +20,7 @@
 <body>
   <nav class="custom-navbar navbar navbar-expand-lg navbar-dark bg-primary">
     <div class="container">
-      <a class="navbar-brand" href="/public/pages/login.html">UWA Social Work Placement Mapper</a>
+      <a class="navbar-brand" href="/pages/login.html">UWA Social Work Placement Mapper</a>
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav">
         <span class="navbar-toggler-icon"></span>
       </button>
