--- a/public/pages/match.html
+++ b/public/pages/match.html
@@ -247,7 +247,7 @@
 <body>
   <nav class="navbar navbar-expand-lg navbar-dark bg-primary custom-navbar">
     <div class="container">
-      <a class="navbar-brand" href="/public/pages/login.html">UWA Social Work Placement Mapper</a>
+      <a class="navbar-brand" href="/pages/login.html">UWA Social Work Placement Mapper</a>
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav">
         <span class="navbar-toggler-icon"></span>
       </button>
