--- a/public/pages/map-filter.html
+++ b/public/pages/map-filter.html
@@ -6,8 +6,9 @@
     <title>Visualize</title>
     <link href="https://api.mapbox.com/mapbox-gl-js/v2.15.0/mapbox-gl.css" rel="stylesheet"> <!--mapbox css link-->
     <script src="https://api.mapbox.com/mapbox-gl-js/v2.15.0/mapbox-gl.js"></script> <!--mapbox js link-->
-    <link href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap/5.3.0/css/bootstrap.min.css" rel="stylesheet"> <!--bootstrap link-->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet"> <!--bootstrap link-->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css"> <!--bootstrp icon link-->
+
     <script src="https://kit.fontawesome.com/0e7cae0c06.js" crossorigin="anonymous"></script> <!--fontawesome icon link-->
     <link rel="stylesheet" href="../css/styles.css"> <!--custom css-->
     <link rel="stylesheet" href="../css/nav.css"> <!--custom css-->
@@ -248,6 +249,7 @@
     <!--right sidebar ends-->
     
     <!--js script link-->
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
     <script type="module" src="../js/app.js"></script>
     <script type="module" src="../js/auth-check.js"></script>
     <script type="module" src="../js/logout.js"></script>
